Fix projects layout issues

--- a/app/assets/sass/_project.scss
+++ b/app/assets/sass/_project.scss
@@ -34,7 +34,7 @@ div#cboxOverlay
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	visibility: visible !important; 
+	visibility: visible !important;
 	opacity: 0.5 !important;
 	background: url(../images/overlay.png) repeat 0 0;
 	top: 0;
@@ -42,60 +42,71 @@ div#cboxOverlay
 	border: 0px;
 }
 
-#cboxTopLeft 
+#cboxTopLeft
 {
 	width: 21px;
 	height: 21px;
 	background: url(../images/controls.png) no-repeat -101px 0;
 }
 
-#cboxTopCenter 
+#cboxTopCenter
 {
 	height: 21px;
 	background: url(../images/border.png) 0 0 repeat-x;
 }
 
-#cboxTopRight 
+#cboxTopRight
 {
 	width: 21px;
 	height: 21px;
 	background: url(../images/controls.png) no-repeat -130px 0;
 }
 
-#cboxMiddleLeft 
+#cboxMiddleLeft
 {
 	width: 21px;
 	background: url(../images/controls.png) left top repeat-y;
 }
 
-#cboxContent 
+#cboxContent
 {
 	background: #fff;
 	overflow: hidden;
 }
 
-#cboxMiddleRight 
+#cboxMiddleRight
 {
 	width: 21px;
 	background: url(../images/controls.png) right top repeat-y;
 }
 
-#cboxBottomLeft 
+#cboxBottomLeft
 {
 	width: 21px;
 	height: 21px;
 	background: url(../images/controls.png) no-repeat -101px -29px;
 }
 
-#cboxBottomCenter 
+#cboxBottomCenter
 {
 	height: 21px;
 	background: url(../images/border.png) 0 -29px repeat-x;
 }
 
-#cboxBottomRight 
+#cboxBottomRight
 {
 	width: 21px;
 	height: 21px;
 	background: url(../images/controls.png) no-repeat -130px -29px;
+}
+
+.projects
+{
+	height: 550px;
+}
+.learn-more
+{
+	position: absolute;
+	right: 25px;
+	bottom: 30px;
 }
